# cpp_project

./: CMakeLists.txt  Makefile  main  main.cpp
src/: game.cpp  game.h  game_entity.cpp  game_entity.h  generic_game.h  player.cpp
src/components/: button.cpp  button.h  checkbox.cpp  checkbox.h  component.h  custom_button.cpp  custom_button.h  custom_text.cpp  custom_text.h  player.cpp  player.h
src/text/: custom_text.cpp  custom_text.h
